<!--
  ~ Copyright (c) 2015 [1076559197@qq.com | tchen0707@gmail.com]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License”);
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_capture"
        android:title="@string/menu_capture"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_scan"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_about_us"
        android:title="@string/menu_about_us"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_feedback"
        android:title="@string/menu_feedback"
        android:orderInCategory="300"
        app:showAsAction="never"/>
</menu>
