<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 [1076559197@qq.com | tchen0707@gmail.com]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License”);
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    android:id="@+id/player_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/player_loading_target"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/player_container_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/player_title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sr_color_primary"
            android:minHeight="?attr/actionBarSize"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/player_back"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                android:src="@drawable/ic_back"/>

            <TextView
                android:id="@+id/player_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="left|center_vertical"
                android:singleLine="true"
                android:text="@string/player_title"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text"/>
        </LinearLayout>

        <com.youku.player.base.YoukuPlayerView
            android:id="@+id/full_holder"
            android:layout_width="match_parent"
            android:layout_height="240dp "/>

        <ScrollView
            android:id="@+id/player_loading_target_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:fadingEdgeLength="0dp"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/player_view_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_view_count"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/player_view_count"
                        android:textColor="@color/player_gray"
                        android:textSize="@dimen/small_text"/>

                    <ImageView
                        android:layout_width="@dimen/one_px"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@drawable/common_list_divider"/>

                    <TextView
                        android:id="@+id/player_comment_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_comment"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/player_comment_count"
                        android:textColor="@color/player_gray"
                        android:textSize="@dimen/small_text"/>

                    <ImageView
                        android:layout_width="@dimen/one_px"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@drawable/common_list_divider"/>

                    <TextView
                        android:id="@+id/player_favor_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/ic_favor"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/player_favor_count"
                        android:textColor="@color/player_gray"
                        android:textSize="@dimen/small_text"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:background="@drawable/common_list_divider"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/common_list_divider"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/player_user_avatar"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_avatar"/>

                    <TextView
                        android:id="@+id/player_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/player_user_avatar"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/player_user_avatar"
                        android:ellipsize="end"
                        android:gravity="left|center_vertical"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/music_player_user_name_color"
                        android:textSize="@dimen/medium_text"/>

                    <TextView
                        android:id="@+id/player_publish_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/player_user_name"
                        android:ellipsize="end"
                        android:gravity="right|center_vertical"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/player_gray"
                        android:textSize="@dimen/small_text"/>
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:background="@drawable/common_list_divider"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/common_list_divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/player_tags"
                        android:textColor="@color/player_gray"
                        android:textSize="@dimen/small_text"/>

                    <me.gujun.android.taggroup.TagGroup
                        android:id="@+id/player_tag_group"
                        style="@style/TagGroup.Beauty_Red.Inverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/one_px"
                    android:background="@drawable/common_list_divider"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>